# annual_report_financial_extractor

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/: companies.json
docs/: technical_approach.md
src/annual_report_extractor/: __init__.py  config.py  graph.py  models.py  prompts.py
src/annual_report_extractor/nodes/: __init__.py  extract_statements.py  index_pages.py  validate_output.py
src/annual_report_extractor/services/: __init__.py  excel_service.py  llm_service.py  pdf_service.py  statement_extractor.py
src/annual_report_extractor/utils/: company_metadata.py  validation.py
src/annual_report_financial_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
