[project]
name = "annual-report-financial-extractor"
version = "0.1.0"
description = "LangGraph-based annual report financial extractor for Indian listed companies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.60",
  "langchain-openai>=0.2.14",
  "openai>=1.57.0",
  "pymupdf>=1.24.10",
  "openpyxl>=3.1.5",
  "streamlit>=1.40.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.10.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
